# python-libpvarki

./: .bumpversion.cfg  .pre-commit-config.yaml  Dockerfile_alpine  Dockerfile_debian  README.md  README.rst  pyproject.toml
.github/workflows/: build.yml  release.yml
src/libpvarki/: __init__.py  logging.py  shell.py
src/libpvarki/middleware/: __init__.py  mtlsheader.py
src/libpvarki/mtlshelp/: __init__.py  context.py  csr.py  pkcs12.py  session.py
src/libpvarki/schemas/: generic.py  product.py
tests/: conftest.py  test_libpvarki.py  test_logging.py  test_shell.py
tests/data/ca_public/: foo.pem  mkcert_ca.pem  rm_ca_chain.pem
tests/data/persistent/private/: mtlsclient.key  tlsserver.key
tests/data/persistent/public/: tlsserver_chain.pem
tests/middleware/: app.py  test_middleware.py  test_openapispec.py  test_product.py
tests/mtls/: __init__.py  test_helpers.py  test_pkcs12.py  test_session.py
tests/schemas/: test_generic.py  test_product.py
