[tool.poetry]
name = "libpvarki"
version = "1.7.0"
description = "Common helpers like standard logging init"
authors = ["Eero af Heurlin <eero.afheurlin@iki.fi>"]
homepage = "https://github.com/pvarki/python-libpvarki/"
repository = "https://github.com/pvarki/python-libpvarki/"
license = "MIT"
readme = "README.rst"


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=libpvarki --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.8"
ecs-logging = "^2.0"
fastapi = ">0.89,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
# FIXME: Migrate to v2, see https://docs.pydantic.dev/2.3/migration/#basesettings-has-moved-to-pydantic-settings
pydantic= ">=1.10,<2.0"
cryptography = "^41.0"
libadvian = "^1.4"
aiohttp = "^3.8"
aiodns = "^3.0"
brotli = "^1.0"
cchardet = { version="^2.1", python="<=3.10"}
# FIXME: Once everything using this is migrared to cryptography drop the dep
pyopenssl = "^23.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
coverage = "^7.3"
pytest-cov = "^4.1"
pylint = "^2.17"
black = "^23.7"
bandit = "^1.7"
mypy = "^1.5"
pre-commit = "^3.3"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.2"
httpx = ">=0.23,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
# FIXME: Once everything using pyopenssl is migrared to cryptography drop the dep
types-pyopenssl = "^23.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
